src/test/ui/traits/issue-98938.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-98938.rs:6:5
   |
LL |     Foo::bar();
   |     ^^^^^^^^ cannot call trait method as a free function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
